--- a/src/app/main/pages/quality/analysis/progress/dialogs/analysis-dialog/analysis-dialog.component.scss
+++ b/src/app/main/pages/quality/analysis/progress/dialogs/analysis-dialog/analysis-dialog.component.scss
@@ -56,18 +56,18 @@
 }
 
 .btn-result-1{
-    background: red;
-    color: white;
+    background: #FFFFFF;
+    color: #2B2B2B;
+    border: black 1px solid;
     margin-left: 190px;
     border-radius: 5px;
-    border: none;
     padding: 10px 80px 10px 80px;
     font-size: 1.5em;
     font-weight: bold;
 }
 .btn-result-2{
-    background:blue;
-    color: white;
+    background:#FDCF41;
+    color: #2B2B2B;
     margin-left: 190px;
     border-radius: 5px;
     border: none;
@@ -76,7 +76,7 @@
     font-weight: bold;
 }
 .btn-result-3{
-    background: purple ;
+    background: #F28421;
     color: white;
     margin-left: 190px;
     border-radius: 5px;
@@ -86,7 +86,7 @@
     font-weight: bold;
 }
 .btn-result-4{
-    background: yellow;
+    background: #FF2D2D;
     color: white;
     margin-left: 190px;
     border-radius: 5px;
