--- a/src/app/main/pages/quality/analysis/tracing/dialogs/acc-corrective-dialog/acc-corrective-dialog.component.scss
+++ b/src/app/main/pages/quality/analysis/tracing/dialogs/acc-corrective-dialog/acc-corrective-dialog.component.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     &__details{
-        margin: 20px;
+        margin-top: 20px;
     }
     &__informations{
        
