--- a/src/app/main/pages/quality/analysis/results/results.component.scss
+++ b/src/app/main/pages/quality/analysis/results/results.component.scss
@@ -26,13 +26,13 @@ table {
     width: 100px;
   }
   
-  .btn-state-assigned {
+  .btn-state-process {
     background:  #FF2D2D;
     color: black;
     width: 100px;
   }
 
-  .btn-state-corrective {
+  .btn-state-tracing {
     background: #f2994a;
     color: white;
     width: 100px;
